# NFTHub

./: .gitignore  Cargo.toml  Makefile  README.md  nftsubstreams.yaml  nftsubstreamsStore.yaml  subgraph.yaml  substreams-nonbatched.spkg  substreams.spkg  substreams.yaml
contracts/: 0.json  NFTHubtestnet.sol  contractAddress.txt  imagegenerator.py  metadataGenerator.py
frontend/nfthub/: package-lock.json  package.json
frontend/nfthub/src/: App.js  index.js
frontend/nfthub/src/Component/: CopyIconButton.js  Metamask.js  NavBar.js  Nftcard.js  Profile.js  ReceiveButton.js  SendETHButton.js  SendNFTButton.js
frontend/nfthub/src/Pages/: Home.js
frontend/nfthub/src/helper/: copy.js
graph-node/: docker-compose.yml  up.sh
graph-node/config/: config.toml
proto/: erc721.proto
schema/: schema.graphql  schema.sql
src/: graph_out.rs  lib.rs  libNoStore.rs  libStore.rs  rpc.rs  utils.rs
src/pb/: eth.erc721.v1.rs
