[package]
name = "nftsubstreams"
version = "0.1.0"
edition = "2021"

[lib]
name = "nftsubstreams"
crate-type = ["cdylib"]

[dependencies]
base64-url = "1.4.13"
ethabi = "18"
hex-literal = "0.3.4"
num-bigint = "0.4.3"
num-traits = "0.2.15"
prost = "0.11"
protobuf-json = "0.3.0"
serde = "1.0.152"
serde_json = "1.0.93"
substreams = "0.5"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.0.0"
substreams-ethereum = "0.8"
substreams-ethereum-core = "0.8.0"
tiny-keccak = "2.0.2"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"

[build]
target = "wasm32-unknown-unknown"
